# space-adventure

./: Cargo.toml  README.md
assets/: registry.json
assets/models/: dock.glb  drone.glb  pinguin.glb  ship2.glb  torus.glb
src/: _drone.rs  asteroids.rs  autopilot.rs  camera.rs  crosshair.rs  docks.rs  drone.rs  dummy.rs  effects.rs  env.rs  laser.rs  main.rs  missile.rs  particles.rs  target_select.rs  ui.rs
