[package]
name = "space-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"
# bevy-inspector-egui = "0.24.0"
# bevy_gltf_components = "0.5"
# bevy_registry_export = "0.3"
avian3d = "0.1"
bevy_panorbit_camera= "0.19.1"
bevy_hanabi = {version = "0.12.0" , default-features = false , features = ["3d"] }




# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release]    # wasm less size 
# opt-level = 'z'

[dependencies.bevy]
version="0.14.0"
default-features = false
features = [
    # default ---
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    # "bevy_gilrs",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_state",
    # "bevy_sprite",
    # "bevy_text",
    "bevy_ui",
    
    
    "png",
    # "jpeg",
    #"ktx2",   # Preferred format for GPU textures
    #"zstd",   # ZSTD compression support in KTX2 files
    # "hdr",
    # "vorbis",
    # "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    # "webgl2",
    
    # optional ---
    "dynamic_linking",  #FOR DEBUG!!!
]

[profile.release]
codegen-units = 1